# temporal-sagas

./: .gitignore  DockerfileWorker  DockerfileWorkflow  README.md  activities.py  book_workflow.py  obj.py  pyproject.toml  run_worker.py  run_workflow.py
static/: run.tape
templates/: book_vacation.html
yaml/: deployment.yaml  tls-secret.yaml
