[tool.poetry]
name = "comma"
version = "0.1.0"
description = ""
authors = ["Patrick Rachford <prachford@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ruff = "^0.0.246"

[tool.poetry.group.dev.dependencies]
temporalio = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
format = [{cmd = "ruff --fix ./*.py"}]
lint = [{cmd = "ruff check ./*.py"}]


[tool.ruff]
select = ["E", "F"]
line-length = 120